# OpenCL_tests

./: README.md
mult_vecs/: CMakeLists.txt  main.cpp
print_devices/: CMakeLists.txt  main.cpp
